force-app/main/default/objects/Usage_Log__c/Usage_Log__c.object-meta.xml
<CustomObject>
    <label>Usage Log</label>
    <nameField>
        <displayFormat>UL-{0000}</displayFormat>
        <label>Usage Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>