force-app/main/default/objects/Usage_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Usage Logs</relationshipLabel>
    <relationshipName>Usage_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>