force-app/main/default/objects/Usage_Log__c/fields/Features_Used__c.field-meta.xml
<CustomField>
    <fullName>Features_Used__c</fullName>
    <label>Features Used</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>