force-app/main/default/objects/Usage_Log__c/fields/Log_Month__c.field-meta.xml
<CustomField>
    <fullName>Log_Month__c</fullName>
    <label>Log Month</label>
    <type>Date</type>
</CustomField>