force-app/main/default/objects/Usage_Log__c/fields/Sessions__c.field-meta.xml
<CustomField>
    <fullName>Sessions__c</fullName>
    <label>Sessions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>